--- a/backend/public/.htaccess
+++ b/backend/public/.htaccess
@@ -18,8 +18,10 @@
     RewriteRule ^(.*)$ $1 [R=200,L]
 
     # Redirect Trailing Slashes If Not A Folder...
+    # But don't redirect if it's the root API path
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteCond %{REQUEST_URI} !^/api/?$
     RewriteRule ^ %1 [L,R=301]
 
     # Send Requests To Front Controller...
