--- a/web/env.template
+++ b/web/env.template
@@ -7,9 +7,9 @@
 # Local development:
 #   VITE_API_BASE_URL=http://localhost:8000/api/v1
 #
-# Production (example):
-#   VITE_API_BASE_URL=https://nas.namelesss.store/backend/api/v1
+# Production:
+#   VITE_API_BASE_URL=https://nas.namelesss.store/backend/public/api/v1
 #
-# Note: If your backend is in a subdirectory like /backend/, include it in the URL
+# Note: The backend is accessible at /backend/public/api, so include /public in the URL
 VITE_API_BASE_URL=http://localhost:8000/api/v1
 
